# lalib

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE.txt  README.md  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: audit.yml  coverage.yml  docs.yml  lint.yml  release.yml  test_coverage.yml  test_docstrings.yml  tests.yml
docs/: conf.py  index.rst  requirements.txt
src/lalib/: __init__.py  config.py  domains.py
src/lalib/elements/: __init__.py  galois.py  gf2.py
src/lalib/fields/: __init__.py  base.py  complex_.py  galois.py  rational.py  real.py  utils.py
tests/: __init__.py  conftest.py  test_docstrings.py  test_domains.py  test_top_level_imports.py  test_version.py  utils.py
tests/elements/: __init__.py  test_galois.py  test_gf2.py  test_top_level_imports.py
tests/fields/: __init__.py  test_axioms.py  test_base.py  test_complex.py  test_galois.py  test_rational.py  utils.py
